--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-body {
-    --bg-color: #f5f5f5;
-    --text-color: #000;
+body{
+    --bg-color: #7e7d82ff;
+    --text-color: #0b0808ff;
+    display:flex;
+    align-items:center;
+    flex-direction:column;
 }
 
 .calculator {
@@ -15,6 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width:content;
 }
 
 .theme-toggle {
@@ -30,7 +34,7 @@ body {
 }
 
 #input {
-    width: 100%;
+    width:95%;
     padding: 10px;
     font-size: 20px;
     text-align: right;
@@ -47,15 +51,20 @@ body {
     margin-top: -20px;
 }
 
-.keypad {
+.Keypad {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
+    gap: 20px;
     width: 100%;
 }
 
-.numbers,
 .operations {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.Numbers {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
@@ -109,3 +118,4 @@ button:hover {
 .dark-mode .operator-btn:hover {
     background-color: #ffbf00;
     color: #000;
+}
